# Rubik-Cube-QtQuick3d

./: BaseCube.qml  CMakeLists.txt  MagicCubic.qml  Main.qml  README.md  main.cpp
meshes/: cube_001_mesh.mesh  cube_002_mesh.mesh  cube_003_mesh.mesh  cube_004_mesh.mesh  cube_005_mesh.mesh  cube_006_mesh.mesh  cube_007_mesh.mesh  cube_008_mesh.mesh  cube_009_mesh.mesh  cube_010_mesh.mesh  cube_011_mesh.mesh  cube_012_mesh.mesh  cube_014_mesh.mesh  cube_015_mesh.mesh  cube_016_mesh.mesh  cube_017_mesh.mesh  cube_018_mesh.mesh  cube_019_mesh.mesh  cube_020_mesh.mesh  cube_021_mesh.mesh  cube_022_mesh.mesh  cube_023_mesh.mesh  cube_024_mesh.mesh  cube_025_mesh.mesh  cube_026_mesh.mesh  cube_043_mesh.mesh  cube_mesh.mesh
